--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cajaxjs": "^3.0.5",
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
+    "portal-vue": "^2.1.7",
     "register-service-worker": "^1.7.2",
     "v-animate-css": "^0.0.6",
     "vue": "^2.6.14",
