--- a/package.json
+++ b/package.json
@@ -3,35 +3,32 @@
   "version": "1.0.4",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "cajaxjs": "^3.0.5",
-    "core-js": "^3.8.3",
-    "echarts": "^5.4.1",
-    "portal-vue": "^2.1.7",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "cajaxjs": "^3.0.7",
+    "core-js": "^3.38.1",
+    "echarts": "^5.5.1",
+    "pinia": "^2.2.4",
+    "primeflex": "^3.3.1",
+    "qrcode": "^1.5.4",
     "register-service-worker": "^1.7.2",
-    "v-animate-css": "^0.0.6",
-    "vue": "^2.6.14",
-    "vue-echarts": "^6.5.1",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "v-animate-css": "^1.0.1",
+    "vite": "^5.4.10",
+    "vue": "^3.5.12",
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^9.13.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "sass": "^1.80.4",
+    "sass-loader": "^16.0.2"
   }
 }
