--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-vue": "^9.30.0",
     "sass": "^1.80.4",
     "sass-loader": "^16.0.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
